@@ -1,5 +1,8 @@
 2019-09-12 Wiley E. Hill <wileyhill@gmail.com>
 
+    * src/gtksheet/gtksheet.c: Reduce scope of GtkTableChild and GtkBoxChild in
+      gtk_sheet_get_entry.
+
     * src/x_dialog.c: Remove call to deprecated gtk_window_position x_dialog_column_visibility.
 
 2019-09-11 Wiley E. Hill <wileyhill@gmail.com>
